+ new
* changed
- removed

--------------------------------------------------------------------------------

❓ OpenMoji 12.4/13.0 - __ ___ 2020


👉

New:
  + Greta Thunberg
  + Copyleft Symbol
  + Sound Recording Copyright
  + Service Mark Symbol
  + Various gardening related things:
    gardener, lawn mower, push cart, axe, spade
  + Pigeon
  + Macaw

Redesign:
  * Bahrain Flag
  * Eject Symbol
  * Copyright
  * Registered
  * Trade Mark

Fix:
  * number of fingers in Face with Hand Over Mouth, Yawning Face, Hugging Face
  * size of hand in Thinking Face
  * contour in Shushing Face
    by @nicdiac
  * which black used in geometric Unicode shapes
  * number of keys in Keyboard
  * colour of contour in Half Orange Fruit
  * alignment of stars on US Flag
  * size of Person Walking
  * white fill in:
        Carousel Horse, Foggy, High-Speed Train, Ballot Box, Chart Increasing, Chart
        Decreasing
  * handle in Megaphone
  * size and fill of Bookmark Tabs
  * size and fill of Roll of Paper
  * resize:
        Dove, Spider, Spider Web, Turtle, Pills, Medication, Plaster, Bagel,
        Mechanical Arm, Mouth, OK Button, SOS Button

Tech:
  * NPM openmoji package: Removed "engines" property in package.json


--------------------------------------------------------------------------------

🛠 OpenMoji 12.3 - 22 May 2020

Many improvements, fixes and new OpenMojis:
👉 More Emoji 13, ca. 2/3 of all new ones
👉 New logos and symbols
👉 New and consolidated animals
👉 New flags and lots of fixes
👉 New set of various coffee related things

🙏 Special thanks to @kriskowal for making the new build system happen!

New:
  + Emoji 13:
    1FAA0 Plunger, 1FA9A Carpentary Saw, 1FA9B Screwdriver, 1FAA1 Sewing Needle,
    1FAA4 Mouse Trap, 1FAA7 Placard, 1FA9E Mirror, 1FA83 Boomerang, 1FAA3 Bucket,
    1FAB6 Feather, 1FAB4 Potted Plant, 1FA9D Hook, 1FAA6 Headstone
    by Liz Bravo @lizbravob
  + Logos:
    Android logo, Apple logo, Windows logo, Ubuntu logo by @fuddl
    LinkedIn Logo