@@ -1265,7 +1265,7 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 🇲🇾,1F1F2-1F1FE,,Ferdinand Sorg,2019-02-13
 🇲🇿,1F1F2-1F1FF,,Ferdinand Sorg,2019-02-13
 🇳🇦,1F1F3-1F1E6,,Ferdinand Sorg,2019-02-13
-🇳🇨,1F1F3-1F1E8,,Ferdinand Sorg,2019-02-13
+🇳🇨,1F1F3-1F1E8,,Carlin MacKenzie,2020-06-18
 🇳🇪,1F1F3-1F1EA,,Ferdinand Sorg,2019-02-13
 🇳🇫,1F1F3-1F1EB,,Ferdinand Sorg,2019-02-13
 🇳🇬,1F1F3-1F1EC,,Ferdinand Sorg,2019-02-13
