@@ -3127,7 +3127,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🇲🇾,1F1F2-1F1FE,flags,country-flag,flag: Malaysia,"MY, flag",,Ferdinand Sorg,2019-02-13,,,,,2,4071
 🇲🇿,1F1F2-1F1FF,flags,country-flag,flag: Mozambique,"MZ, flag",,Ferdinand Sorg,2019-02-13,,,,,2,4072
 🇳🇦,1F1F3-1F1E6,flags,country-flag,flag: Namibia,"NA, flag",,Ferdinand Sorg,2019-02-13,,,,,2,4073
-🇳🇨,1F1F3-1F1E8,flags,country-flag,flag: New Caledonia,"NC, flag",,Ferdinand Sorg,2019-02-13,,,,,2,4074
+🇳🇨,1F1F3-1F1E8,flags,country-flag,flag: New Caledonia,"NC, flag",,Carlin MacKenzie,2020-06-18,,,,,2,4074
 🇳🇪,1F1F3-1F1EA,flags,country-flag,flag: Niger,"NE, flag",,Ferdinand Sorg,2019-02-13,,,,,2,4075
 🇳🇫,1F1F3-1F1EB,flags,country-flag,flag: Norfolk Island,"NF, flag",,Ferdinand Sorg,2019-02-13,,,,,2,4076
 🇳🇬,1F1F3-1F1EC,flags,country-flag,flag: Nigeria,"NG, flag",,Ferdinand Sorg,2019-02-13,,,,,2,4077
