@@ -53183,8 +53183,8 @@
     "annotation": "flag: New Caledonia",
     "tags": "NC, flag",
     "openmoji_tags": "",
-    "openmoji_author": "Ferdinand Sorg",
-    "openmoji_date": "2019-02-13",
+    "openmoji_author": "Carlin MacKenzie",
+    "openmoji_date": "2020-06-18",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
