@@ -50100,7 +50100,7 @@ tr:nth-child(even) {
         <td>flag: New Caledonia</td>
         <td>NC,  flag</td>
         <td></td>
-        <td>Ferdinand Sorg</td>
+        <td>Carlin MacKenzie</td>
         <td><a download href="src/flags/country-flag/1F1F3-1F1E8.svg">⬇</a></td>
     </tr>
     
